--- a/app/src/main/res/layout/activity_event_detail.xml
+++ b/app/src/main/res/layout/activity_event_detail.xml
@@ -5,11 +5,31 @@
     android:layout_height="match_parent"
     tools:context=".activities.eventdetail.EventDetailActivity">
 
-    <android.support.v7.widget.AppCompatTextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/event_detail_name"
-        android:textSize="20dp"
-        android:gravity="center"
-        />
+        android:orientation="vertical"
+
+        >
+        <android.support.v7.widget.AppCompatTextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:id="@+id/event_detail_name"
+            android:textSize="20dp"
+            android:gravity="center"
+            android:textStyle="bold"
+            />
+
+        <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/event_detail_venue"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textSize="20dp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
 </android.support.v7.widget.ContentFrameLayout>
