Updated retrofit2:adapter and catch HttpError, in case there was.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,29 @@
     android:layout_height="match_parent"
     tools:context=".activities.main.MainActivity">
 
-    <android.support.v7.widget.RecyclerView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:id="@+id/reciclerView"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:id="@+id/reciclerView"
+            android:layout_height="wrap_content">
+        </android.support.v7.widget.RecyclerView>
 
 
-    </android.support.v7.widget.RecyclerView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="20px"
+            android:id="@+id/emptyListView"
+            android:textSize="40px"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:visibility="invisible"
+            />
+
+
+    </RelativeLayout>
+
 </FrameLayout>
